# Minos

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  index.md  pyproject.toml  requirements.txt
.ai/: APP-Overall-Vision.md  prd.md
.ai/architecture/: arch.md
.ai/prd/: prd.md
.ai/stories/: story-1.story.md  story-10.story.md  story-11.story.md  story-12.story.md  story-2.story.md  story-3.story.md  story-4.story.md  story-5.story.md  story-6.story.md  story-7.story.md  story-8.story.md  story-9.story.md
ci/: README.md
ci/fixtures/: dummy.apk
ci/github-actions/: minos-scan.yml
ci/gitlab-ci/: minos-scan.yml
ci/tests/: ci_workflow_smoke.sh
containers/: Dockerfile  README.md  entrypoint.sh
docs/: dynamic-prestudy.md
dynamic/interfaces/: README.md  input_schema.json  output_schema.json
dynamic/samples/: dynamic_findings.json  merge_demo.py  static_findings.json
dynamic/tests/: test_merge_demo.py
scripts/: container_ci_example.sh  container_smoke.sh
tests/: test-cases.md  test-guide.md  test_cli_scan.py  test_manifest_scanner.py  test_manifest_scanner_defaults.py  test_manifest_scanner_yaml.py  test_mapping.py  test_rulesync.py  test_rulesync_adapter_appi.py  test_rulesync_adapter_eurlex.py  test_rulesync_adapter_leginfo.py  test_rulesync_adapter_pipl.py  test_rulesync_adapter_planalto.py  test_rulesync_convert.py  test_rulesync_convert_io.py  test_rulesync_convert_segment.py  test_rulesync_convert_url.py  test_rulesync_from_url.py  test_rulesync_online.py  test_scan_rules_loading.py  test_sdk_scanner.py  test_sdk_scanner_yaml.py
(+10 files in other folders)
